--- a/diamm/static/stylesheets/_fonts.scss
+++ b/diamm/static/stylesheets/_fonts.scss
@@ -1,6 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic);
+//@import url(https://fonts.googleapis.com/css?family=Gentium+Basic:400,400i,700);
+//@import url(https://fonts.googleapis.com/css?family=Rubik:400,500,700);
+//@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700);
+//@import url(https://fonts.googleapis.com/css?family=Alegreya:400,400i,700,700i|Gentium+Book+Basic:400,400i,700,700i);
+@import url('https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,400i,500,500i,700,700i|Alegreya+Sans:400,400i,500,500i,700,700i|Alegreya:400,400i,700,700i');
+//@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic);
+//@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic);
 
-$serif: "PT Serif", serif;
-$sans-serif: "PT Sans", sans-serif;
-$menu-font: $sans-serif;
+$serif: "Alegreya", serif;
+$sans-serif: "Alegreya Sans", sans-serif;
+$small-caps: "Alegreya Sans SC", sans-serif;
+//$serif: "Gentium Book Basic", serif;
+//$sans-serif: "Source Sans Pro", sans-serif;
+$menu-font: $small-caps;
