--- a/diamm/static/stylesheets/styles.css
+++ b/diamm/static/stylesheets/styles.css
@@ -10,8 +10,7 @@
 */
 /* Base files. */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-@import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic);
+@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,400i,500,500i,700,700i|Alegreya+Sans:400,400i,500,500i,700,700i|Alegreya:400,400i,700,700i");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -2765,18 +2764,17 @@ form {
   .beta-header h3 {
     padding: 10px 0;
     margin: 0;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Alegreya Sans", sans-serif;
     color: #fdfffc; }
     .beta-header h3 a {
-      color: #011627; }
+      color: #1b1b1b; }
 
 .site-header {
   width: 100%;
   z-index: 100; }
 
 .navbar {
-  box-shadow: 0 0 4px 0 #011627;
-  border-top: 5px solid #dd1c1a; }
+  background: #1b1b1b; }
   .navbar:before, .navbar:after {
     content: " ";
     display: table; }
@@ -2787,7 +2785,7 @@ form {
   .navbar .navbar-brand {
     z-index: 10;
     padding-right: 1rem;
-    height: 40px;
+    height: 50px;
     overflow: visible; }
     .navbar .navbar-brand li {
       margin-right: 1em; }
@@ -2798,27 +2796,31 @@ form {
         .navbar .navbar-brand li a:hover, .navbar .navbar-brand li a:focus {
           background: none;
           color: unset; }
+        .navbar .navbar-brand li a img {
+          height: 80px;
+          filter: drop-shadow(1px 1px 1px #1b1b1b); }
   .navbar .navbar-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    height: 50px;
     justify-content: center;
     padding: 0;
     margin: 0; }
     .navbar .navbar-list a {
-      color: #011627;
+      color: #fdfffc;
       text-decoration: none;
-      padding: 0.6rem 1rem;
-      font-size: 1.2rem;
-      font-family: "PT Sans", sans-serif;
-      font-weight: bold;
-      -webkit-font-smoothing: antialiased;
+      padding: 0.6rem 0.6rem;
+      font-size: 1.1rem;
+      text-transform: lowercase;
+      font-family: "Alegreya Sans SC", sans-serif;
+      font-weight: 500;
       display: flex;
       align-items: flex-start; }
       .navbar .navbar-list a:hover, .navbar .navbar-list a:focus {
         border-bottom: none;
-        background: #dd1c1a;
-        color: #fdfffc; }
+        background: #fdfffc;
+        color: #dd1c1a; }
     .navbar .navbar-list ul.dropdown-content {
       display: none;
       position: absolute;
@@ -2853,7 +2855,8 @@ form {
       .navbar .navbar-list .navbar-highlight a {
         color: #fff; }
         .navbar .navbar-list .navbar-highlight a:hover, .navbar .navbar-list .navbar-highlight a:focus {
-          background: #011627; }
+          background: #fdfffc;
+          color: #dd1c1a; }
 
 nav.center-block.text-center ul li {
   display: inline; }
@@ -2902,7 +2905,7 @@ footer {
       -webkit-border-radius: 0.5em;
       -moz-border-radius: 0.5em;
       border-radius: 0.5em;
-      background: rgba(1, 22, 39, 0.7);
+      background: rgba(27, 27, 27, 0.7);
       text-align: center;
       margin: 0 auto;
       width: 40%;
@@ -2919,7 +2922,7 @@ footer {
   text-decoration: none;
   padding-bottom: 1rem;
   font-size: 0.8rem;
-  font-family: "PT Sans", sans-serif;
+  font-family: "Alegreya Sans", sans-serif;
   display: block; }
 
 #contribution-form {
@@ -2936,63 +2939,150 @@ footer {
     width: 25rem;
     background: none;
     display: block;
-    font-family: "PT Serif", serif;
+    font-family: "Alegreya", serif;
     font-size: 0.9rem; }
 
 ul.contribution-list li {
   list-style-type: none; }
 
-.source-header {
-  margin-bottom: 1em; }
-  .source-header p {
-    margin: 0;
-    padding: 0; }
-  .source-header h1, .source-header h2 {
-    margin: 0;
-    padding: 0; }
-  .source-header h2 {
-    font-weight: 400;
-    font-size: 1.3em; }
+.source-section-selector {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 1px solid #dddede;
+  margin-bottom: 0.5rem; }
+  .source-section-selector li.active {
+    font-weight: 700; }
+  .source-section-selector li {
+    margin-bottom: 0; }
+    .source-section-selector li a {
+      font-family: "Alegreya Sans SC", sans-serif;
+      font-size: 1rem;
+      text-transform: lowercase;
+      padding: 0.3rem 0.6rem;
+      display: flex;
+      align-items: flex-start; }
+      .source-section-selector li a:hover, .source-section-selector li a:focus {
+        border-bottom: none; }
+
+.source-header p {
+  margin: 0;
+  padding: 0; }
+
+.source-header h1, .source-header h2 {
+  margin: 0;
+  padding: 0; }
+
+.source-header h2 {
+  font-weight: 400;
+  font-size: 1.3em; }
 
 .source-description h3, .source-description h4, .source-bibliography h3, .source-bibliography h4, .source-inventory h3, .source-inventory h4, .composer-inventory h3, .composer-inventory h4 {
-  font-weight: bold;
-  font-size: 1em;
+  font-family: "Alegreya Sans", sans-serif;
+  font-weight: 500;
+  font-size: 1.1em;
   letter-spacing: normal;
   margin-top: 0; }
 
-.source-inventory {
-  border-right: 1px solid #dddede; }
+.source-inventory .quicklook {
+  font-size: 14px;
+  cursor: pointer;
+  vertical-align: top; }
+  .source-inventory .quicklook:hover {
+    color: #fdfffc;
+    background: #dd1c1a;
+    border-color: #dd1c1a; }
 
-.source-inventory .inventory-header, .composer-inventory .inventory-header {
+.source-inventory .source-inventory-menu {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 0.5rem; }
+  .source-inventory .source-inventory-menu li.active {
+    font-weight: 700; }
+  .source-inventory .source-inventory-menu li {
+    margin-bottom: 0;
+    font-family: "Alegreya Sans", sans-serif;
+    font-size: 0.9rem;
+    padding: 0.3rem 0.3rem;
+    display: flex;
+    align-items: flex-start; }
+    .source-inventory .source-inventory-menu li a:hover, .source-inventory .source-inventory-menu li a:focus {
+      border-bottom: none; }
+
+.source-inventory hr {
+  margin: 1em; }
+
+.source-inventory .inventory-header {
   font-size: 1.125em;
   font-weight: 600; }
 
-.source-inventory p, .composer-inventory p {
+.source-inventory p {
   padding-top: 0; }
 
-.source-inventory dd, .composer-inventory dd {
-  margin-bottom: 1.3em; }
-  .source-inventory dd table, .composer-inventory dd table {
-    margin-bottom: 0; }
-  .source-inventory dd th, .composer-inventory dd th {
-    line-break: strict;
+.source-inventory .source-order {
+  margin-bottom: 1.5rem;
+  font-family: "Alegreya Sans", sans-serif;
+  width: 100%; }
+  .source-inventory .source-order td {
+    text-align: left;
     vertical-align: top;
-    white-space: nowrap; }
-  .source-inventory dd th, .source-inventory dd td, .composer-inventory dd th, .composer-inventory dd td {
-    border-bottom: none; }
+    border: 0;
+    padding: 0; }
+    .source-inventory .source-order td p {
+      margin: 0;
+      padding: 0;
+      font-family: "Alegreya Sans", sans-serif; }
+  .source-inventory .source-order .foliation {
+    font-size: 1.1em;
+    font-weight: 700;
+    width: 10%; }
+  .source-inventory .source-order .composition-info {
+    width: 60%; }
+    .source-inventory .source-order .composition-info h4 {
+      font-size: 1.1em;
+      font-weight: 700; }
+  .source-inventory .source-order .composers {
+    width: 30%; }
+    .source-inventory .source-order .composers span {
+      margin-right: 0.6em; }
+  .source-inventory .source-order .item-details, .source-inventory .source-order .item-bibliography {
+    font-size: 0.9rem; }
+    .source-inventory .source-order .item-details ul, .source-inventory .source-order .item-bibliography ul {
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0;
+      padding: 0; }
+      .source-inventory .source-order .item-details ul .title, .source-inventory .source-order .item-bibliography ul .title {
+        font-weight: 700; }
+      .source-inventory .source-order .item-details ul li, .source-inventory .source-order .item-bibliography ul li {
+        margin: 0 0.5em 0 0; }
+    .source-inventory .source-order .item-details .voice-detail, .source-inventory .source-order .item-bibliography .voice-detail {
+      margin-bottom: 0.4rem; }
+
+.source-description hr {
+  margin: 1em 0; }
+
+.source-description p {
+  margin-bottom: 0.4rem;
+  padding-top: 0;
+  padding-left: 0; }
 
 .source-description .source-details {
+  font-family: "Alegreya Sans", sans-serif;
+  font-weight: 400;
+  font-size: 0.9rem;
   width: 100%;
   margin-bottom: 1rem; }
   .source-description .source-details th, .source-description .source-details td {
-    border-bottom: 1px solid #dddede;
-    padding: 8px; }
+    border-bottom: none;
+    padding: 3px; }
   .source-description .source-details th {
-    border-right: 1px solid #dddede; }
-  .source-description .source-details th {
+    font-weight: 700;
     vertical-align: top;
-    padding-right: 10px;
-    width: 20%; }
+    padding-right: 6px;
+    width: 15%; }
   .source-description .source-details ul, .source-description .source-details li {
     margin: 0; }
 
@@ -3054,7 +3144,7 @@ ul.contribution-list li {
       margin-bottom: 0; }
 
 .type-filter {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Alegreya Sans", sans-serif;
   font-size: 90%;
   padding: 0.5rem;
   margin-top: -1rem;
@@ -3083,9 +3173,9 @@ ul.contribution-list li {
     font-weight: bold; }
 
 .search-results .result-count {
-  font-family: "PT Sans", sans-serif;
+  font-family: "Alegreya Sans", sans-serif;
   font-size: 90%;
-  color: #011627; }
+  color: #1b1b1b; }
 
 .search-results .search-result h4 {
   margin-bottom: 0.1rem; }
@@ -3124,7 +3214,7 @@ form.login, form.create-form {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2); }
   form.login h1, form.create-form h1 {
     position: relative;
-    color: #011627;
+    color: #1b1b1b;
     margin-top: 0.8rem;
     margin-left: 0.8rem;
     font-weight: 400;
@@ -3139,7 +3229,7 @@ form.login, form.create-form {
     background-color: transparent;
     -webkit-appearance: none; }
     form.login input:focus, form.create-form input:focus {
-      color: #011627;
+      color: #1b1b1b;
       border-color: transparent;
       border-bottom: 1px solid #a9acab; }
   form.login #password, form.create-form #password {
@@ -3155,7 +3245,7 @@ form.login, form.create-form {
   font-weight: bold; }
 
 .debug {
-  border: 1px solid #011627; }
+  border: 1px solid #1b1b1b; }
 
 html {
   height: 100%;
@@ -3164,8 +3254,8 @@ html {
 body {
   line-height: 1.45;
   font-weight: 400;
-  font-family: "PT Sans", sans-serif;
-  color: #011627;
+  font-family: "Alegreya", serif;
+  color: #1b1b1b;
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -3178,15 +3268,14 @@ li.image-source-list {
   list-style-type: none; }
 
 a {
-  color: #1395db;
-  text-decoration: none;
-  box-sizing: border-box; }
+  color: #1485cc;
+  text-decoration: none; }
   a:hover {
-    color: #2364aa;
-    border-bottom: 1px solid #2364aa; }
+    color: #0971b2;
+    border-bottom: 1px solid #0971b2; }
 
 p {
-  font-family: "PT Serif", serif;
+  font-family: "Alegreya", serif;
   margin-bottom: 1.3em;
   padding-top: 0.5em;
   padding-left: 0.3em; }
