--- a/diamm/templates/website/blocks/header.jinja2
+++ b/diamm/templates/website/blocks/header.jinja2
@@ -2,7 +2,7 @@
     <nav role="navigation" class="navbar">
         <ul class="navbar-list navbar-brand pull-left">
             <li>
-                <a href="{{ url('home') }}"><img src="{{ static('images/diammlogo.png') }}" /></a>
+                <a href="{{ url('home') }}"><img src="{{ static('images/headerLogo.png') }}" /></a>
             </li>
         </ul>
         <ul class="navbar-list pull-left">
