--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -11,7 +11,7 @@
     {% endblock %}
 </head>
 <body>
-    {% include "website/blocks/beta_notice.jinja2" %}
+    {# include "website/blocks/beta_notice.jinja2" #}
     {% include "website/blocks/header.jinja2" %}
 
     <div class="full-width">
@@ -24,15 +24,14 @@
         {% endblock %}
     </div>
 
-    <footer class="footer" style="text-align: center;">
+    {# <footer class="footer" style="text-align: center;">
         <img src="{{ static('images/oxford.png') }}">
         <img src="{{ static('images/bodleian.png') }}">
         <img src="{{ static('images/ba.png') }}">
         <img src="{{ static('images/johnfell.png') }}">
         <img src="{{ static('images/ahrc.png') }}">
-    </footer>
+    </footer>#}
 
-    {# <script src="{{ static('javascripts/dist/bundle.js') }}" type="application/javascript"></script> #}
     {% block scripts %}
     {% endblock %}
 
