--- a/diamm/static/stylesheets/styles.scss
+++ b/diamm/static/stylesheets/styles.scss
@@ -1,3 +1,4 @@
+@import "../javascripts/lib/diva.js/css/diva.min.css";
 @import "mixins";
 @import "skeleton/skeleton";
 @import "font-awesome/font-awesome";
@@ -20,15 +21,14 @@
 
 html {
   height: 100%;
-  font-size: 1.125em;
+  font-size: 1em;
 }
 
 // Font calculations based on: http://type-scale.com/?size=18&scale=1.414&text=A%20Visual%20Type%20Scale&webfont=Libre+Baskerville&font-family=Alegreya%20Sans&font-weight=400&font-family-headers=&font-weight-headers=inherit&background-color=white&font-color=%23333
 
 body {
   line-height: 1.45;
-  font-weight: 400;
-  font-family: $serif;
+  font-family: $sans-serif;
   color: $diamm-black;
 
   min-height: 100%;
@@ -46,17 +46,17 @@ li.image-source-list {
 }
 
 a {
-  color: $diamm-lt-blue;
+  color: $diamm-dk-blue;
   text-decoration: none;
   //box-sizing: border-box;
   &:hover {
-    color: $diamm-dk-blue;
-    border-bottom: 1px solid $diamm-dk-blue;
+    color: $diamm-lt-blue;
+    background: lighten($diamm-lt-blue, 52%);
   }
 }
 
 p {
-  font-family: $serif;
+  font-family: $sans-serif;
   margin-bottom: 1.3em;
   padding-top: 0.5em;
   padding-left: 0.3em;
@@ -81,6 +81,18 @@ h3 {font-size: 1.266em;}
 h4 {font-size: 1.125em;}
 
 small, .font_small {font-size: 0.889em;}
+
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: $sans-serif;
+
+  .message {
+    font-size: 2em;
+    margin-left: 1em;
+  }
+}
 
 .container {
   flex: 1 0 auto;
