--- a/diamm/templates/website/source/source_detail.jinja2
+++ b/diamm/templates/website/source/source_detail.jinja2
@@ -19,7 +19,6 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ static('javascripts/lib/jquery/jquery.min.js') }}"></script>
-    <script src="{{ static('javascripts/lib/diva.js/js/diva.min.js') }}"></script>
+{#    <script src="{{ static('javascripts/lib/jquery/jquery.min.js') }}"></script>#}
     <script src="{{ static('apps/source/dist/bundle.js') }}"></script>
 {% endblock %}
