--- a/diamm/static/stylesheets/_search.scss
+++ b/diamm/static/stylesheets/_search.scss
@@ -15,24 +15,54 @@ $search-input-adjust: $search-font-size + 1rem;
 }
 
 .type-filter {
-  text-align: center;
-  border-bottom: 1px solid $diamm-light-grey;
+  border-bottom: 2px solid $diamm-light-grey;
+  display: flex;
+  justify-content: center;
+  text-transform: capitalize;
+
+  .active {
+    font-weight: 700;
+  }
+
+  .type-filter-label {
+    font-weight: 600;
+    padding: 0.6rem 0.6rem;
+    margin: 0;
+  }
+
+  .show-all {
+    padding: 0.6rem 0.6rem;
+    a {
+      color: $diamm-red;
+      margin: 0;
+      &:hover {
+        background: none;
+        cursor: pointer;
+      }
+    }
+  }
+
   ul {
     margin-bottom: 0;
     list-style: none;
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+
     li {
+      justify-content: flex-start;
+      text-align: center;
       margin-bottom: 0;
-    }
-    a {
-      &:hover, &:focus {
-        border-bottom: none;
-        font-weight: 500;
+      padding: 0.6rem 0.6rem;
+
+      a {
+        color: $diamm-red;
+        margin: 0;
+        &:hover {
+          background: none;
+          cursor: pointer;
+        }
       }
-      display: flex;
-      align-items: flex-start;
-      padding: 0 0.3rem;
+
     }
   }
 }
@@ -40,12 +70,89 @@ $search-input-adjust: $search-font-size + 1rem;
 .search-results {
   .search-result {
     width: 100%;
+    margin: 0.5rem 0;
     h3 {
-      font-weight: 400;
-      font-size: 1.4rem;
+      margin: 0;
+      font-weight: 600;
+      font-size: 1.3rem;
     }
     .result-type {
       color: $diamm-med-grey;
+      font-weight: 400;
+    }
+  }
+}
+
+.facet-sidebar {
+  .search-result-count {
+    text-align: center;
+    font-weight: 600;
+    padding: 0.5rem;
+  }
+
+  .facet-block {
+    border-top: 1px solid $diamm-light-grey;
+    margin: 1rem 0;
+    .facet-title {
+      display: flex;
+      justify-content: flex-start;
+      padding: 0.6rem 0;
+      .facet-show-control {
+        flex: 1 1 auto;
+        text-align: right;
+        align-items: center;
+        cursor: pointer;
+        font-size: 0.8rem;
+        color: $diamm-red;
+      }
+      h4 {
+        flex: 1 1 auto;
+        font-size: 1rem;
+        margin: 0;
+      }
+    }
+    .facet-body {
+      .highlighted {
+        background-color: $diamm-light-grey;
+      }
+      label, input {
+        margin: 0;
+        font-weight: 400;
+        font-size: 1rem;
+      }
+      input {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.archive-location-facet-country_s {
+  .archive-location-facet-city_s {
+    margin-left: 1rem;
+  }
+}
+
+.pagination {
+  border-top: 2px solid $diamm-light-grey;
+  font-size: 1.3rem;
+  margin: 1.4rem 0;
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+
+  li.selected {
+    font-weight: 700;
+  }
+
+
+  li {
+    margin: 0 0.6rem;
+
+    a {
+      color: $diamm-red;
+      cursor: pointer;
     }
   }
 }
