--- a/diamm/templates/base.jinja2
+++ b/diamm/templates/base.jinja2
@@ -19,7 +19,7 @@
         {% endblock %}
     </div>
 
-    <div class="container site-content">
+    <div class="container is-fluid page-body">
         {% block body %}
         {% endblock %}
     </div>
