--- a/diamm/static/stylesheets/_navbar.scss
+++ b/diamm/static/stylesheets/_navbar.scss
@@ -19,133 +19,275 @@
   z-index: 100;
 }
 
-.navbar {
-  //box-shadow: 0 0 4px 0 $diamm-black;
-  //border-top: 5px solid $diamm-red;
-  background: $diamm-black;
-  &:before,
-  &:after {
-    content: " "; // 1
-    display: table; // 2
-  }
-  &:after {
-    clear: both;
-  }
-  li {
-    margin-bottom: 0;
-  }
-  .navbar-brand {
-    z-index: 10;
-    padding-right: 1rem;
-    height: 50px;
-    overflow: visible;
-    li {
-      margin-right: 1em;
-      a {
-        margin: 0;
-        padding: 0;
-        padding-left: 0.5rem;
-        &:hover, &:focus {
-          background: none;
-          color: unset;
-        }
+.nav {
+  background-color: $diamm-grey;
+  box-shadow: 0 2px 5px rgba(10, 10, 10, 0.6), 0 0 0 0px rgba(10, 10, 10, 0.5);
 
-        img {
-          height: 80px;
-          filter: drop-shadow(1px 1px 1px $diamm-black);
-        }
-      }
+  a {
+    color: $diamm-white;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    &:hover {
+      color: $diamm-red;
+      background: $diamm-white;
     }
   }
 
-  .navbar-list {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    height: 50px;
-    justify-content: center;
-    padding: 0;
-    margin: 0;
-    a {
-      @include small-caps;
-      color: $diamm-white;
-      text-decoration: none;
-      padding: 0.6rem 0.6rem;
-      font-size: 1.3rem;
-      font-weight: 500;
-      //-webkit-font-smoothing: antialiased;
-      display: flex;
-      align-items: flex-start;
-      &:hover, &:focus {
-        border-bottom: none;
-        background: $diamm-white;
-        color: $diamm-red;
-      }
-    }
-
-    ul.dropdown-content {
-        display: none;
-        position: absolute;
-        list-style-type: none;
-        margin: 0;
-        -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
-        -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
-        box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
-    }
-
-    ul.dropdown-content a, input {
-        font-size: 1rem;
-        font-weight: normal;
-        background-color: #fff;
-        &:hover, &:focus {
-            background: $diamm-red;
-        };
-        text-transform: None;
-    }
-
-    ul.dropdown-content li {
-        height: 2rem;
-        float: none;
-        background-color: #fff;
-        overflow: hidden;
-    }
-
-    .sub-pages {
-      list-style-type: square;
-      margin-right: 0;
-    }
-
-      .section-title {
-        list-style-type: none;
-        a {
-          font-size: 0.9rem;
-        }
-      }
-
-      .navbar-item:hover .dropdown-content {
-        display: block;
-      }
-
-      .navbar-highlight {
-        background: $diamm-red;
-        a {
-          color: #fff;
-          &:hover, &:focus {
-            background: $diamm-white;
-            color: $diamm-red;
-          }
-        }
-      }
+  a.nav-highlight {
+    color: $diamm-white;
+    background-color: $diamm-red;
+    &:hover {
+      background-color: $diamm-white;
+      color: $diamm-red;
     }
   }
+}
 
-  nav.center-block.text-center {
-    ul {
-      li {
-        display: inline;
-      }
-    }
+.dropdown-content {
+  display: none;
+}
+
+.dropdown-item:hover .dropdown-content {
+  display: block;
+  position: absolute;
+  div {
+    width: 100%;
   }
+  a {
+    color: $diamm-red;
+    width: 100%;
+  }
+}
 
+//.navbar {
+//  //box-shadow: 0 0 4px 0 $diamm-black;
+//  //border-top: 5px solid $diamm-red;
+//  background: $diamm-black;
+//  &:before,
+//  &:after {
+//    content: " "; // 1
+//    display: table; // 2
+//  }
+//  &:after {
+//    clear: both;
+//  }
+//  li {
+//    margin-bottom: 0;
+//  }
+//  .navbar-brand {
+//    z-index: 10;
+//    padding-right: 1rem;
+//    height: 50px;
+//    overflow: visible;
+//    li {
+//      margin-right: 1em;
+//      a {
+//        margin: 0;
+//        padding: 0;
+//        padding-left: 0.5rem;
+//        &:hover, &:focus {
+//          background: none;
+//          color: unset;
+//        }
+//
+//        img {
+//          height: 80px;
+//          filter: drop-shadow(1px 1px 1px $diamm-black);
+//        }
+//      }
+//    }
+//  }
+//
+//  .navbar-list {
+//    list-style: none;
+//    display: flex;
+//    flex-wrap: wrap;
+//    justify-content: center;
+//    padding: 0;
+//    margin: 0;
+//    a {
+//      @include small-caps;
+//      color: $diamm-white;
+//      text-decoration: none;
+//      padding: 0.6rem 0.6rem;
+//      font-size: 1.3rem;
+//      font-weight: 600;
+//      -webkit-font-smoothing: antialiased;
+//      display: flex;
+//      align-items: flex-start;
+//      &:hover, &:focus {
+//        border: none;
+//        background: $diamm-white;
+//        color: $diamm-red;
+//      }
+//    }
+//
+//    ul.dropdown-content {
+//      color: $diamm-black;
+//      display: none;
+//      list-style-type: none;
+//      margin: 0;
+//      -webkit-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
+//      -moz-box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
+//      box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
+//    }
+//
+//    ul.dropdown-content a, input {
+//      color: $diamm-black;
+//      @include small-caps;
+//      font-size: 1rem;
+//      font-weight: normal;
+//      background-color: #fff;
+//      &:hover, &:focus {
+//        border: none;
+//        background: $diamm-red;
+//        color: $diamm-white;
+//      };
+//      text-transform: uppercase;
+//    }
+//
+//    ul.dropdown-content li {
+//        background-color: #fff;
+//    }
+//
+//
+//    .sub-pages {
+//      list-style-type: square;
+//      margin-right: 0;
+//    }
+//
+//      .section-title {
+//        list-style-type: none;
+//        a {
+//          font-size: 0.9rem;
+//        }
+//      }
+//
+//      .navbar-item:hover .dropdown-content {
+//        display: block;
+//      }
+//
+//      .navbar-highlight {
+//        background: $diamm-red;
+//        a {
+//          color: #fff;
+//          &:hover, &:focus {
+//            background: $diamm-white;
+//            color: $diamm-red;
+//          }
+//        }
+//      }
+//    }
+//  }
+//
+//  nav.center-block.text-center {
+//    ul {
+//      li {
+//        display: inline;
+//      }
+//    }
+//  }
 
-
+//.navbar {
+//  position: absolute;
+//  width: 100%;
+//  background-color: #000;
+//  height: $navbar-height;
+//  display: flex;
+//  justify-content: space-between;
+//
+//  .navbar-block {
+//    display: flex;
+//  }
+//
+//  ul.navbar-list {
+//    position: relative;
+//    list-style: none;
+//    margin: 0;
+//    display: flex;
+//    flex-wrap: wrap;
+//
+//    .navbar-highlight
+//    {
+//      background-color: $diamm-red;
+//      color: $diamm-white;
+//      &:hover {
+//
+//      }
+//    }
+//
+//    li.right {
+//      align-self: flex-end;
+//    }
+//
+//    li.navbar-item {
+//      margin: 0;
+//      height: 100%;
+//      display: flex;
+//      a {
+//        @include small-caps;
+//        color: $diamm-white;
+//        font-size: 1.3rem;
+//        font-weight: 600;
+//        -webkit-font-smoothing: antialiased;
+//        padding: 0.6rem 0.6rem;
+//
+//        &:hover {
+//          cursor: pointer;
+//          color: $diamm-red;
+//          background: $diamm-white;
+//        }
+//      }
+//    }
+//
+//    li.dropdown {
+//      flex-direction: column;
+//      ul {
+//        position: relative;
+//        margin: 0;
+//        li {
+//          a {
+//            font-size: 1rem;
+//          }
+//        }
+//      }
+//    }
+//
+//    .dropdown-content {
+//      display: none;
+//      list-style-type: none;
+//    }
+//
+//    .navbar-item:hover .dropdown-content {
+//      display: block;
+//    }
+//  }
+//
+//  ul.navbar-brand {
+//    li.navbar-item {
+//      a {
+//        padding: 0;
+//        &:hover {
+//          background: none;
+//        }
+//        img {
+//          margin: 0 0.8rem;
+//          height: 80px;
+//        }
+//      }
+//    }
+//  }
+//}
+//
+//#logout_form {
+//  margin: 0;
+//  input[type=submit] {
+//    border: none;
+//    text-align: left;
+//    padding: 0.6rem 0.6rem;
+//    line-height: inherit;
+//    width: 100%;
+//    margin: 0;
+//  }
+//}
