--- a/diamm/templates/website/auth/reset.jinja2
+++ b/diamm/templates/website/auth/reset.jinja2
@@ -7,7 +7,7 @@
                 <h2>Reset password</h2>
                 <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
                 <p>NB: Accounts on the beta website are independent from diamm.ac.uk, and resetting your password on this site will not affect your account details on the old site.</p>
-                <form method="post">{% csrf_token %}
+                <form method="post" class="reset">{% csrf_token %}
                     {{ form }}
                     <button type="submit">Reset</button>
                 </form>
